@@ -78,6 +78,7 @@ S3method(makeRLearner,classif.plsdaCaret)
 S3method(makeRLearner,classif.qda)
 S3method(makeRLearner,classif.quaDA)
 S3method(makeRLearner,classif.randomForest)
+S3method(makeRLearner,classif.randomForestSRC)
 S3method(makeRLearner,classif.rda)
 S3method(makeRLearner,classif.rpart)
 S3method(makeRLearner,classif.rrlda)
@@ -174,6 +175,7 @@ S3method(predictLearner,classif.plsdaCaret)
 S3method(predictLearner,classif.qda)
 S3method(predictLearner,classif.quaDA)
 S3method(predictLearner,classif.randomForest)
+S3method(predictLearner,classif.randomForestSRC)
 S3method(predictLearner,classif.rda)
 S3method(predictLearner,classif.rpart)
 S3method(predictLearner,classif.rrlda)
@@ -306,6 +308,7 @@ S3method(trainLearner,classif.plsdaCaret)
 S3method(trainLearner,classif.qda)
 S3method(trainLearner,classif.quaDA)
 S3method(trainLearner,classif.randomForest)
+S3method(trainLearner,classif.randomForestSRC)
 S3method(trainLearner,classif.rda)
 S3method(trainLearner,classif.rpart)
 S3method(trainLearner,classif.rrlda)
